--- a/login.html
+++ b/login.html
@@ -36,6 +36,17 @@
   float: left;
   background-color: white;
 }
+.int{
+  width: 300px;
+  height: 25px;
+}
+.login{
+  height: 370px;
+  width: 300px;
+  background-color: #616A6B;
+  margin: 0px auto;
+  margin-top: 20px;
+}
 
     </style>
   </head>
@@ -44,7 +55,7 @@
    <img src="img/pic1.png" alt="" width="150" height="100px">
  </div>
  <div class="line">
- <marquee> <h6 style="text-align: center;"><<<<<< Special offer upto 70% discount on Grocery items.....</h6></marquee>
+  <h6 style="text-align: center;"><<<<<< Special offer upto 70% discount on Grocery items.....</h6>
  </div>
 
 <div class="content">
@@ -56,28 +67,37 @@
   </li>
   <li class="nav-item">
     <a style="color: white;" class="nav-link" href="#">Products</a>
-    <a style="color: white;" class="nav-link" href="#">Grocery</a>
-    <a style="color: white;" class="nav-link" href="#">Dress</a>
-    <a style="color: white;" class="nav-link" href="#">Electronics</a>
      
   </li>
    
   <li class="nav-item">
-    <a style="color: white;" class="nav-link" href="login.html">Login</a>
+    <a style="color: white;" class="nav-link" href="#">Login</a>
   </li>
   <li class="nav-item">
-    <a style="color: white;" class="nav-link" href="register.html">Register</a>
+    <a style="color: white;" class="nav-link" href="#">Register</a>
   </li>
 </ul>
-  
 </div>
 
+
 <div class="main">
-  <img style="margin-top: 10px; margin-left: 30px;" src="img/pic2.jpg"  width="1150" height="100"><br>
-  <img src="img/pic4.jpg" alt="" width="400" height="200">
-   <img src="img/pic5.png" alt="" width="400" height="200">
-    <img src="img/pic3.jpg" alt="" width="400" height="200">
+  <div class="login">
+    <form>
+      <div style="text-align: center;">
+        <img src="img/pic6.jpg" height="100" width="100">
+      </div><br>
+      
+      <h2 style="text-align: center;">Welcome</h2>
+       Username<br>
+      <input type="text" name="" placeholder="Enter Your Username"><hr>
+       Password<br>
+      <input type="text" name="" placeholder="Enter Your Password"><hr>
+      <input class="int" type="submit" value="Submit" name="">
+    </form>
+  </div>
 </div>
+
+
  <footer style="">
    
  <h4 style="color: white; text-align: center;">©probhu prosad borman 172-15-1560_2021</h4>
