--- a/register.html
+++ b/register.html
@@ -36,6 +36,15 @@
   float: left;
   background-color: white;
 }
+.int{
+  width: 300px;
+  height: 25px;
+}
+.frm{
+  margin: 0px auto;
+  height: 380px;
+  width: 400px;
+  background-color: #229954;
 
     </style>
   </head>
@@ -44,7 +53,7 @@
    <img src="img/pic1.png" alt="" width="150" height="100px">
  </div>
  <div class="line">
- <marquee> <h6 style="text-align: center;"><<<<<< Special offer upto 70% discount on Grocery items.....</h6></marquee>
+  <h6 style="text-align: center;"><<<<<< Special offer upto 70% discount on Grocery items.....</h6>
  </div>
 
 <div class="content">
@@ -56,28 +65,37 @@
   </li>
   <li class="nav-item">
     <a style="color: white;" class="nav-link" href="#">Products</a>
-    <a style="color: white;" class="nav-link" href="#">Grocery</a>
-    <a style="color: white;" class="nav-link" href="#">Dress</a>
-    <a style="color: white;" class="nav-link" href="#">Electronics</a>
      
   </li>
    
   <li class="nav-item">
-    <a style="color: white;" class="nav-link" href="login.html">Login</a>
+    <a style="color: white;" class="nav-link" href="#">Login</a>
   </li>
   <li class="nav-item">
-    <a style="color: white;" class="nav-link" href="register.html">Register</a>
+    <a style="color: white;" class="nav-link" href="#">Register</a>
   </li>
 </ul>
-  
 </div>
 
+
 <div class="main">
-  <img style="margin-top: 10px; margin-left: 30px;" src="img/pic2.jpg"  width="1150" height="100"><br>
-  <img src="img/pic4.jpg" alt="" width="400" height="200">
-   <img src="img/pic5.png" alt="" width="400" height="200">
-    <img src="img/pic3.jpg" alt="" width="400" height="200">
+  <div class="frm">
+    <form style="text-align: center; margin-top: 20px;">
+  <h1 style="text-align: center;">Sign up</h1>
+    <input class="int" type="text" name="Fname" placeholder="First Name"><br>
+      <input class="int" type="text" name="Lname" placeholder="Last Name Name"><br>
+        <input class="int" type="email" name="email" placeholder="E-mail"><br>
+          <input class="int" type="number" name="contact" placeholder="Contact"><br>
+            <input class="int" type="text" name="uid" placeholder="User ID"><br>
+              <input class="int" type="password" name="pass" placeholder="Password"><br>
+                <input class="int" type="password" name="Cpass" placeholder="Confirm Password"><br><br>
+                  <input type="file" name="pic"><br><br>
+                  <input class="int" type="submit" name="" value="Submit">
+  </form>
+  </div>
 </div>
+
+
  <footer style="">
    
  <h4 style="color: white; text-align: center;">©probhu prosad borman 172-15-1560_2021</h4>
