--- a/user.html
+++ b/user.html
@@ -36,6 +36,16 @@
   float: left;
   background-color: white;
 }
+.name{
+  margin-top: 90px;
+  margin-left: 250px;
+  float: left;
+}
+.pic{
+  margin-top: 50px;
+  margin-left: 250px;
+  float: left;
+}
 
     </style>
   </head>
@@ -44,7 +54,7 @@
    <img src="img/pic1.png" alt="" width="150" height="100px">
  </div>
  <div class="line">
- <marquee> <h6 style="text-align: center;"><<<<<< Special offer upto 70% discount on Grocery items.....</h6></marquee>
+  <h6 style="text-align: center;"><<<<<< Special offer upto 70% discount on Grocery items.....</h6>
  </div>
 
 <div class="content">
@@ -56,28 +66,36 @@
   </li>
   <li class="nav-item">
     <a style="color: white;" class="nav-link" href="#">Products</a>
-    <a style="color: white;" class="nav-link" href="#">Grocery</a>
-    <a style="color: white;" class="nav-link" href="#">Dress</a>
-    <a style="color: white;" class="nav-link" href="#">Electronics</a>
      
   </li>
    
   <li class="nav-item">
-    <a style="color: white;" class="nav-link" href="login.html">Login</a>
+    <a style="color: white;" class="nav-link" href="#">Login</a>
   </li>
   <li class="nav-item">
-    <a style="color: white;" class="nav-link" href="register.html">Register</a>
+    <a style="color: white;" class="nav-link" href="#">Register</a>
+    <a style="color: white;" class="nav-link" href="#">Username: Raju</a>
   </li>
 </ul>
-  
 </div>
 
+
 <div class="main">
-  <img style="margin-top: 10px; margin-left: 30px;" src="img/pic2.jpg"  width="1150" height="100"><br>
-  <img src="img/pic4.jpg" alt="" width="400" height="200">
-   <img src="img/pic5.png" alt="" width="400" height="200">
-    <img src="img/pic3.jpg" alt="" width="400" height="200">
+<div class="name">
+  Name : Raju<br>
+  Username : raju.cse<br>
+  Age : 22<br>
+  Contact : +88010000000<br>
+  Role: User
 </div>
+<div class="pic">
+  <img src="img/pic6.jpg" alt="" height="200" width="200">
+  User Image
+</div>
+</div>
+<br>
+
+
  <footer style="">
    
  <h4 style="color: white; text-align: center;">©probhu prosad borman 172-15-1560_2021</h4>
