--- a/index.html
+++ b/index.html
@@ -1,155 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Currency Converter</title>
+	<title>CSE417</title>
+	<style>
+		*{
+			margin: 0px;
+			padding: 0px;
+		}
+		.one{
+			height: 250px;
+			width: 400px;
+			background-color: black;
+			margin-top: 150px;
+			margin-left: 470px;
+		}
+		.two{
+			height: 40px;
+			width: 380px;
+			background-color: red;
+		}
+		.three{
+			height: 40px;
+			width: 380px;
+			background-color: red;
+		}
+		.four{
+			height: 40px;
+			width: 380px;
+			background-color: red;
+		}
+		.five{
+			height: 40px;
+			width: 380px;
+			background-color: red;
+		}
+	</style>
 </head>
-<body style="background-image: url(img/pic.jpg);">
-	<div style="text-align: center; margin-top: 150px;">
-		
-		<h1>Currency Converter</h1><br>
-<h2>Select Currency</h2>
-<select style="width: 150px;" name="currency" id="inputCurrency" onchange="firstToSecond()" onclick="firstToSecond()" oninput="firstToSecond()">
-	<option value="taka">BDT</option>
-	<option value="ruppe">RUPEE</option>
-	<option value="dollar">USD</option>
-	<option value="riyal">RIYAL</option>
-</select>
-<input type="number" id="firstCurrency" name="first" onclick="firstToSecond()" oninput="firstToSecond()">
+<body>
 
+<div class="one"><br>
+<center>
+	<div class="two">
+	<h3 style="padding: 10px; text-align: left;">DIU</h3>
+</div>
+</center><br>
 
+<center>
+	<div class="three">
+	<h3 style="padding: 10px; text-align: left;">CSE</h3>
+</div>
+</center><br>
 
-<h2>Convert Currency</h2>
-<select style="width: 150px;" name="" id="outputCurrency" onchange="firstToSecond()" onclick="firstToSecond()" oninput="firstToSecond()">
-	<option value="taka1">BDT</option>
-	<option value="ruppe1">RUPEE</option>
-	<option value="dollar1">USD</option>
-	<option value="riyal1">RIYAL</option>
-</select>
-<input type="number"  id="SecondCurrency" name="second">
-	</div>
+<center>
+	<div class="four">
+	<h3 style="padding: 10px; text-align: left;">Web Engineering</h3>
+</div>
+</center><br>
 
-
-
-<script type="text/javascript">
+<center>
+	<div class="five">
+	<h3 style="padding: 10px; text-align: left;">Your ID</h3>
+</div>
+</center>
 	
-function firstToSecond(){
-	var input1 = document.getElementById("firstCurrency").value;
-	var input2 = document.getElementById("SecondCurrency").value;
+</div>
 
-   
-if(document.getElementById("inputCurrency").value == 'taka'){
-
-   	 if(document.getElementById("outputCurrency").value == 'taka1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*1;
-
-   	 }
-   	 else if(document.getElementById("outputCurrency").value == 'ruppe1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*0.88;
-
-   	 }
-   	 else if(document.getElementById("outputCurrency").value == 'dollar1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*0.012;
-
-   	 }
-   	 else if(document.getElementById("outputCurrency").value == 'riyal1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*0.044;
-
-   	 }
-
-   }
-     
-
-
-if(document.getElementById("inputCurrency").value == 'ruppe'){
-
-   	 if(document.getElementById("outputCurrency").value == 'taka1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*1.14;
-
-   	 }
-   	 else if(document.getElementById("outputCurrency").value == 'ruppe1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*0.88;
-
-   	 }
-   	 else if(document.getElementById("outputCurrency").value == 'dollar1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*0.013;
-
-   	 }
-   	 else if(document.getElementById("outputCurrency").value == 'riyal1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*0.050;
-
-   	 }
-
-   }
-
-
-   if(document.getElementById("inputCurrency").value == 'dollar'){
-
-   	 if(document.getElementById("outputCurrency").value == 'taka1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*84.83;
-
-   	 }
-   	 else if(document.getElementById("outputCurrency").value == 'ruppe1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*74.41;
-
-   	 }
-   	 else if(document.getElementById("outputCurrency").value == 'dollar1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*0.012;
-
-   	 }
-   	 else if(document.getElementById("outputCurrency").value == 'riyal1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*3.75 ;
-
-   	 }
-
-   }
-
-
-   if(document.getElementById("inputCurrency").value == 'riyal'){
-
-   	 if(document.getElementById("outputCurrency").value == 'taka1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*22.62;
-
-   	 }
-   	 else if(document.getElementById("outputCurrency").value == 'ruppe1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*19.84;
-
-   	 }
-   	 else if(document.getElementById("outputCurrency").value == 'dollar1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*0.27;
-
-   	 }
-   	 else if(document.getElementById("outputCurrency").value == 'riyal1'){
-
-   	 	 document.getElementById("SecondCurrency").value=input1*0.044;
-
-   	 }
-
-   }
-
-   	
-}
-
-
-
-
-
-
-
-</script>
 </body>
 </html>
